[package]
name = "snitchrs-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]
kernel = ["aya-bpf"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", optional = true }
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main", optional = true }
[lib]
path = "src/lib.rs"
