[package]
name = "snitchrs-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]
kernel = ["aya-bpf"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true, rev = "4c08b9b43" }
aya-bpf = { git = "https://github.com/aya-rs/aya", optional = true, rev = "4c08b9b43" }
[lib]
path = "src/lib.rs"
