[package]
name = "snitchrs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", version = ">=0.11", features=["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
clap = { version = "4.1", features = ["derive"] }
snitchrs-common = { path = "../snitchrs-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "~1.4"
nix = "0.24.0"
procfs = "~0.15"

[[bin]]
name = "snitchrs"
path = "src/main.rs"
